[package]
name = "shrine-core"
version.workspace = true
edition.workspace = true

[dependencies]
shrine-storage = { path = "../shrine-storage" }
milton = { path = "../vere" }   #
tokio.workspace = true
derive_everything.workspace = true
thiserror.workspace = true
async-trait = "0.1.89"
roaring.workspace = true
futures = "0.3.31"
rand = "0.9.2"
tracing.workspace = true
ureq = "3"
