[package]
name = "shrine-test"
version.workspace = true
edition.workspace = true

[dependencies]
shrine-core = { path = "../shrine-core" }
shrine-storage = { path = "../shrine-storage" }
milton = { path = "../vere" }
tokio.workspace = true
derive_everything.workspace = true
heed.workspace = true
thiserror.workspace = true
async-trait = "0.1.89"
roaring.workspace = true
futures = "0.3.31"
rand = "0.9.2"
tracing.workspace = true
ureq = "3"
uuid = { version = "1.12.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
